<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/drawer_content"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:fitsSystemWindows="true"-->
    <!--tools:context=".mainMessMenu"-->
    <!--tools:openDrawer="start">-->
<!--&lt;!&ndash;CoordinatorLayout initially&ndash;&gt;-->



    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/holo_blue_light"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
        <!--android:elevation="4sp"/>-->
        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;// Tab layout to show tabs&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->

            <!--&lt;!&ndash;app:tabMode="fixed"&ndash;&gt;-->
            <!--&lt;!&ndash;app:tabGravity="fill"&ndash;&gt;-->

        <!--<android.support.design.widget.TabLayout-->
        <!--android:id="@+id/tabs"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_1" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_2" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_3" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_4" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem5"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_5" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem6"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_6" />-->

        <!--<android.support.design.widget.TabItem-->
        <!--android:id="@+id/tabItem7"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tab_text_7" />-->

        <!--</android.support.design.widget.TabLayout>-->

    <!--</android.support.design.widget.AppBarLayout>-->


    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;//ViewPager to show tab's fragments&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->
        <!--&lt;!&ndash;//&ndash;&gt;-->

        <!--&lt;!&ndash;<android.support.v4.view.ViewPager&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/vp_pages"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent">&ndash;&gt;-->
        <!--&lt;!&ndash;</android.support.v4.view.ViewPager>&ndash;&gt;-->

        <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

        <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fab"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|end"-->
            <!--android:layout_margin="@dimen/fab_margin"-->
            <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
    <!--</FrameLayout>-->

    <!--<android.support.design.widget.NavigationView-->
    <!--android:id="@+id/nav_view"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="start"-->
    <!--app:headerLayout="@layout/nav_header"-->
    <!--app:menu="@menu/navigation_menu"></android.support.design.widget.NavigationView>-->
    <!--</android.support.v4.widget.DrawerLayout>-->

    <!-- <include layout="@la


        //Earlier code
        <!-<android.support.v7.widget.LinearLayoutCompat-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical">-->
        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@android:color/holo_blue_light"-->
            <!--android:minHeight="?attr/actionBarSize"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--android:elevation="4sp"/>-->

        <!--<FrameLayout-->
            <!--android:id="@+id/fragmentContainer"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->
            <!--<android.support.design.widget.CoordinatorLayout-->
                <!--android:id="@+id/main_content"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->
                <!--<android.support.design.widget.AppBarLayout-->
                    <!--android:id="@+id/appbar"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingTop="@dimen/appbar_padding_top"-->
                    <!--android:theme="@style/AppTheme.AppBarOverlay">-->






                    <!--<android.support.design.widget.TabLayout-->
                        <!--android:id="@+id/tabs"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_1" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem2"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_2" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem3"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_3" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem4"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_4" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem5"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_5" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem6"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_6" />-->

                        <!--<android.support.design.widget.TabItem-->
                            <!--android:id="@+id/tabItem7"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/tab_text_7" />-->

                    <!--</android.support.design.widget.TabLayout>-->
                <!--</android.support.design.widget.AppBarLayout>-->


                <!--&lt;!&ndash;<android.support.design.widget.NavigationView&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/nav_view"&ndash;&gt;-->
                <!--&lt;!&ndash;app:headerLayout="@layout/nav_header"&ndash;&gt;-->
                <!--&lt;!&ndash;app:menu="@menu/navigation_menu"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_gravity="start"></android.support.design.widget.NavigationView>&ndash;&gt;-->


                <!--<android.support.v4.view.ViewPager-->
                    <!--android:id="@+id/container"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

                <!--<android.support.design.widget.FloatingActionButton-->
                    <!--android:id="@+id/fab"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="end|bottom"-->
                    <!--android:layout_margin="@dimen/fab_margin"-->
                    <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
            <!--</android.support.design.widget.CoordinatorLayout>-->

        <!--</FrameLayout>-->

    <!--</android.support.v7.widget.LinearLayoutCompat>-->




    <!--<android.support.design.widget.NavigationView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--app:headerLayout="@layout/nav_header"-->
        <!--app:menu="@menu/navigation_menu"></android.support.design.widget.NavigationView>-->
<!--</android.support.v4.widget.DrawerLayout>-->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/messmenuback"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:elevation="4sp"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:elevation="5dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:tabSelectedTextColor="@android:color/primary_text_light"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"

                app:tabTextColor="@android:color/white"
                tools:ignore="UnusedAttribute">
                <!--app:theme="@style/ThemeOverlay.AppCompat.Dark"-->

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_6" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_7" />

            </android.support.design.widget.TabLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@drawable/messmenuback">

        </android.support.v4.view.ViewPager>



    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/extramess" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"/>


</android.support.v4.widget.DrawerLayout>